--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -19,7 +19,7 @@
           <i class="fa fa-minus-square"></i>
           <span>{{ button_delete }}</span>
         </button>
-        <button id="btn-config-save" type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="updateConfig()" disabled>
+        <button id="btn-config-save" type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="updateConfig()">
             <i class="fa fa-floppy-o"></i>
             <span>{{ button_save }}</span>
         </button>       
