--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -95,7 +95,7 @@
               <a class="nav-link" aria-current="page" href="#"><i class="fa fa-cog"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ logout }}"><i class="fa fa-sign-out"></i></a>
+              <a class="nav-link" aria-current="page" href="{{ logout }}" onclick="logout()"><i class="fa fa-sign-out"></i></a>
             </li>
           </ul>
         </div>
