--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -1,6 +1,6 @@
 {% block ref %}    
 {# <div class="tab-content" id="nav-tab-cont" > #}
-    {# Reference [0] #}
+    {# Reference #}
     <div class="tab-pane fade" id="nav-ref-form" role="tabpanel" aria-labelledby="naf-Ref-tab">      
       <h5 class="title" id="refFormLabel">Reference</h5>         
       {# <hr/> #}
@@ -32,10 +32,7 @@
           </div>
         </div>
       </div>           
-      <div class="eva-ref-form" id="eva-ref-form">                     
-        {# <table class="table table-striped table-hover table-sm table-responsive">     #}
-        {# </table> #}
-      </div>       
+      <div class="eva-ref-form" id="eva-ref-form"></div>       
     </div>  
 {# </div>  #}
 
@@ -64,9 +61,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        {# <button type="submit" class="btn btn-primary" onclick="refCreate()"><i class="fa fa-floppy-o"></i></button> #}
-        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal" onclick="refCreate()">{{ button_save }}&{{button_close}}</button>
-        {# <button type="button" class="btn btn-primary" data-bs-dismiss="modal">{{button_close}}</button> #}
+        {# <button type="submit" class="btn btn-primary" onclick="refSave()"><i class="fa fa-floppy-o"></i></button> #}
+        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal" onclick="refCreate()">{{ button_save }}&{{button_close}}</button>        
       </div>
     </div>
   </div>
