--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -271,6 +271,10 @@
               </div>
             </div> 
             {# <div class="eva-form"></div>   #}
+            <label for="input-ref-req">requisite:</label>
+              <div class="input-group">
+              <input type="text" placeholder="" id="input-ref-req" class="form-control"/>
+            </div>
           </div>
           <div class="tab-pane fade" id="nav-tabular" role="tabpanel" aria-labelledby="nav-tabular-tab">
             <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
