--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -46,9 +46,9 @@
       </div>
       <div class="modal-body">
         <form class="form" id="create-ref-form">  
-          <label for="input-ref-kod">Kod:</label>
+          <label for="input-ref-id">Id:</label>
           <div class="input-group input-group-sm">
-            <input type="text" placeholder="000000000" id="input-ref-kod" class="form-control"/>
+            <input type="text" placeholder="" id="input-ref-id" class="form-control" disabled/>
           </div> 
           <label for="input-ref-name">Name:</label>
           <div class="input-group">
