--- a/views/index.twig
+++ b/views/index.twig
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ lang }}">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta charset="UTF-8">        
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="Cache-Control" content="no-cache">
         <meta name="viewport" content="height=device-height, width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
         <title>EVA</title>            
         <script defer src="./common.js"></script>
