--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -271,9 +271,13 @@
               </div>
             </div> 
             {# <div class="eva-form"></div>   #}
-            <label for="input-ref-req">requisite:</label>
-              <div class="input-group">
-              <input type="text" placeholder="" id="input-ref-req" class="form-control"/>
+            <label for="input-ref-req1">requisite1:</label>
+            <div class="input-group">
+              <input type="text" placeholder="" id="input-ref-req1" class="form-control"/>
+            </div>
+            <label for="input-ref-req2">requisite2:</label>
+            <div class="input-group">
+              <input type="text" placeholder="" id="input-ref-req2" class="form-control"/>
             </div>
           </div>
           <div class="tab-pane fade" id="nav-tabular" role="tabpanel" aria-labelledby="nav-tabular-tab">
