--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -46,14 +46,14 @@
       </div>
       <div class="modal-body">
         <form class="form" id="create-ref-form">  
-          <label for="input-ref-id">Id:</label>
+          {# <label for="input-ref-id">Id:</label>
           <div class="input-group input-group-sm">
             <input type="text" placeholder="" id="input-ref-id" class="form-control" disabled/>
           </div> 
           <label for="input-ref-name">Name:</label>
           <div class="input-group">
             <input type="text" placeholder="Name" id="input-ref-name" class="form-control"/>
-          </div>
+          </div> #}
           {# <label for="input-ref-descr">Descr:</label>
           <div class="input-group">
             <input type="text" placeholder="Descr" id="input-ref-descr" class="form-control"/>
