--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -260,9 +260,13 @@
           <div class="tab-pane fade" id="nav-requisite" role="tabpanel" aria-labelledby="nav-requisite-tab">
             <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
               <div class="btn-group btn-group-sm" role="group">
-                <button type="button" class="btn btn-primary d-flex gap-2 align-items-center"  onclick="reqCreate()">
+                <button type="button" class="btn btn-primary d-flex gap-2 align-items-center"  onclick="reqModal()">
                   <i class="fa fa-plus-square"></i>
                   <span>{{ button_add }}</span>
+                </button>
+                <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="reqEditModal()">
+                  <i class="fa fa-edit"></i>
+                  <span>{{ button_edit }}</span>
                 </button>
                 <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="reqDelete()">
                   <i class="fa fa-minus-square"></i>
@@ -357,11 +361,11 @@
   </div>
 </div> 
 {# Modal Requsite #}
-<div class="modal fade" id="requsiteModal" tabindex="-2" aria-labelledby="requsiteModalLabel" aria-hidden="true">
+<div class="modal fade" id="requisiteModal" tabindex="-2" aria-labelledby="requisiteModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="requsiteModalLabel">Add requsite:</h5>
+        <h5 class="modal-title" id="requisiteModalLabel">Add requisite:</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -381,7 +385,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal" onclick="reqSave()">{{ button_save }}&{{ button_close }}</button>
+        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal" onclick="reqCreate()">{{ button_save }}&{{ button_close }}</button>
       </div>
     </div>
   </div>
