--- a/views/index.twig
+++ b/views/index.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">        
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta http-equiv="Cache-Control" content="no-cache">
-        <meta name="viewport" content="height=device-height, width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+        <meta name="viewport" content="height=device-height, width=device-width, user-scalable=no">
         <title>EVA</title>            
         <script defer src="./common.js"></script>
         <script defer src="./eva-app.js"></script>
