--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -7,7 +7,7 @@
           <i class="fa fa-plus-square"></i>
           <span>{{ button_add }}</span>
         </button>
-        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="objectEditModal()">
+        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit"  onclick="objectEditModal()">
           <i class="fa fa-edit"></i>
           <span>{{ button_edit }}</span>
         </button>
@@ -186,12 +186,12 @@
   </div>
 </div>
 {# Modal Object #}
-<div class="modal fade" id="objectModal" tabindex="-1" aria-labelledby="objectModalLabel" aria-hidden="true">
+<div class="modal fade" id="objectModal" tabindex="-1" data-bs-keyboard="false" aria-labelledby="objectModalLabel" aria-hidden="false">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="objectModalLabel">Add object:</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>          
+        <button type="button" class="btn-close"  aria-label="Close" data-bs-dismiss="modal"></button>          
       </div>
       <ul class="nav nav-tabs" role="tablist" style="background:grey">                
         <li class="nav-item">
@@ -200,7 +200,7 @@
           </a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="#" id="object-requisite" data-bs-toggle="tab" data-bs-target="#nav-requisite"  role="tab" aria-controls="nav-requisite" aria-selected="false" onclick="showRequisiteTable()">
+          <a class="nav-link" href="#" id="object-requisite" data-bs-toggle="tab" data-bs-target="#nav-requisite"  role="tab" aria-controls="nav-requisite" aria-selected="false" onclick="">
             Requisites
           </a>
         </li> 
@@ -260,7 +260,7 @@
           <div class="tab-pane fade" id="nav-requisite" role="tabpanel" aria-labelledby="nav-requisite-tab">
             <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
               <div class="btn-group btn-group-sm" role="group">
-                <button type="button" class="btn btn-primary d-flex gap-2 align-items-center"  onclick="reqModal()">
+                <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="reqModal()">
                   <i class="fa fa-plus-square"></i>
                   <span>{{ button_add }}</span>
                 </button>
@@ -361,12 +361,12 @@
   </div>
 </div> 
 {# Modal Requsite #}
-<div class="modal fade" id="requisiteModal" tabindex="-2" aria-labelledby="requisiteModalLabel" aria-hidden="true">
+<div class="modal fade" id="requisiteModal" tabindex="-2" data-bs-keyboard="false" aria-labelledby="requisiteModalLabel" aria-hidden="false">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="requisiteModalLabel">Add requisite:</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close"  aria-label="Close"  data-bs-dismiss="modal" onclick=""></button>
       </div>
       <div class="modal-body">
         <form class="form" id="create-req-form">
