--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -43,7 +43,7 @@
           <i class="fa fa-user-plus"></i>
           <span>{{ button_add }}</span>
         </button>        
-        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" data-bs-toggle="modal" data-bs-target="#userModal" onclick="userEditModal()">
+        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit"  onclick="userEditModal()">
           <i class="fa fa-edit"></i>
           <span>{{ button_edit }}</span>
         </button>
@@ -154,7 +154,7 @@
             </button>    
           </div>
         </div>
-        <div class="eva-form"></div>          
+        <div class="eva-table"></div>          
       </div>
       <div class="modal-footer">        
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{button_close}}</button>
@@ -335,7 +335,7 @@
     </div>
   </div>
 </div>
-{# Modal Edit Subsystem [4] #}
+{# Modal Edit Subsystem [6] #}
 <div class="modal modal-lg fade" id="editSubsystemModal" tabindex="-2" aria-labelledby="editSubsystemModalLabel" aria-hidden="true">
   <div class="modal-dialog  modal-dialog-scrollable">
     <div class="modal-content">
@@ -352,7 +352,7 @@
             </button>    
           </div>
         </div>
-        <div class="eva-form"></div>          
+        <div class="eva-table"></div>          
       </div>
       <div class="modal-footer">        
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{button_close}}</button>
