--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -10,7 +10,7 @@
             <i class="fa fa-plus-square"></i>
             <span>{{ button_add }}</span>
           </button>
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" data-bs-toggle="modal" data-bs-target="#refModal" onclick="refEditModal()">
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="refEditModal()">
             <i class="fa fa-edit"></i>
             <span>{{ button_edit }}</span>
           </button>
