--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -346,7 +346,7 @@
       <div class="modal-body">          
         <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">          
           <div class="btn-group btn-group-sm" role="group">
-            <button type="submit" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" data-bs-dismiss="modal" onclick="subsystemSelect()">
+            <button type="submit" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="subsystemSelect()">
               <i class=""></i>
               <span>Select</span>
             </button>    
